Added news and film section to the home page

--- a/filmoteka/src/pages/Home.css
+++ b/filmoteka/src/pages/Home.css
@@ -2,15 +2,19 @@
     margin: 0.125rem 0;
 }
 
-.home-section img{
-    object-fit:cover;
-    height: 600px;
+h1{
+    margin-bottom: 2rem !important;
 }
 
 /* Carousel layout */
 .carousel-caption {
     top: 30%;
     bottom: auto;
+}
+
+.d-block{
+    object-fit:cover;
+    height: 600px;
 }
 
 .info-panel{
@@ -30,20 +34,139 @@
     margin-top: 2rem;
 }
 
-.card-element{
-    background-color: aqua;
-    border-radius: 3px;
+.galery{
+    display: flex;
+    flex-direction: row;
 }
+
+.card-element{
+    flex: 1;
+    /* background-color: aqua; */
+    border-radius: 3px;
+    box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.5);
+}
+
+.card-element:nth-child(2){
+    margin: 0 2rem;
+}
+
+.card-first-section{
+    object-fit:contain;
+    height: 200px;
+}
+
+.card-middle-section{
+    padding: 1.5rem;
+    font-size: 1.5rem;
+}
+
+.card-end-section{
+    padding: 0 1.5rem;
+    padding-bottom: 2rem;
+}
+
+.button {
+    margin-top: 1.5rem;
+    font-size: 1.5rem;
+    display: inline-flex;
+    height: 40px;
+    width: 150px;
+    border: 3px solid black;
+    color: black;
+    /* text-transform: uppercase; */
+    text-decoration: none;
+    /* letter-spacing: 1px; */
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.aaa{
+    text-decoration: none;
+    color: black;
+}
+
+#animation-btn {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+  
+#animation-btn a {
+    position: relative;
+    transition: all .45s ease-Out;
+}
+  
+#circle {
+    width: 0%;
+    height: 0%;
+    opacity: 0;
+    line-height: 40px;
+    border-radius: 50%;
+    background: black;
+    position: absolute;
+    transition: all .5s ease-Out;
+    top: 20px;
+    left: 70px;
+}
+  
+  #animation-btn:hover #circle {
+    width: 200%;
+    height: 500%;
+    opacity: 1;
+    top: -70px;
+    left: -70px;
+  }
+  
+  #animation-btn:hover a {
+    color: white;
+  }
+  
 
 /* Third section */
 .bg-color{
-    background-color: aliceblue;
+    background-color: rgba(128, 128, 128, 0.15);
 }
 
 .third-section{
     margin-top: 4rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .news-info{
-    margin: 1rem 0;
+    margin: 2rem 0;
+    background-color: rgba(128, 128, 128, 0.082);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+}
+
+.third-section-img{
+    width: 100%;
+    height: 330px;
+    object-fit: cover;
+}
+
+.third-section-btn{
+    padding: 0.625rem 1.75rem;
+    background-color: transparent;
+    color: black;
+    border: 2px solid black;
+    transition: 0.3s;
+}
+  
+.third-section-btn:hover {
+    background-color: black;
+    color: white;
+}
+
+.news-info-box{
+    display: flex;
+    flex-direction: column;
+    padding: 1.25rem 2rem;
+}
+
+.news-info-box-icon{
+    display: flex;
+    justify-content: right;
 }
