--- a/filmoteka/src/styles.css
+++ b/filmoteka/src/styles.css
@@ -49,7 +49,7 @@ body{
 }
 
 .navbar ul{
-    flex: 2;
+    /* flex: 2; */
     display: flex;
     flex-direction: row;
     justify-content: center;
