--- a/filmoteka/src/pages/Article.css
+++ b/filmoteka/src/pages/Article.css
@@ -24,9 +24,13 @@ hr {
 
 .article-main{
     /* padding-top: 2rem; */
-    background-image: url(../img/aaaaaaaaaa.png);
+    background-image: url(../img/bbbb.png);
     background-size:contain;
     background-repeat: no-repeat;
+}
+
+.article-top{
+    position: relative;
 }
 
 .article-img{
@@ -34,6 +38,36 @@ hr {
     height: 350px;
     object-fit: cover;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+}
+
+.article-img-subsection{
+    position: absolute;
+    top: 83%;
+    left: calc(50% - 144px);
+    padding: 2rem 2rem;
+    border: 2px solid orange;
+    background-color: rgba(30, 30, 30, 0.774);
+    border-radius: 5px;
+}
+
+.article-img-subsection input[type=text]{
+    width: 4rem;
+    font-size: 1.375rem;
+}
+
+.article-img-subsection input[type=submit]{
+    color: white;
+    font-size: 1.375rem;
+    padding: 0.375rem 1rem;
+    background-color: orange;
+    border: none;
+    border-radius: 5px;
+}
+
+.article-img-subsection span{
+    font-size: 1.375rem;
+    margin: auto 0.5rem;
+    color: orange;
 }
 
 .title{
@@ -58,7 +92,7 @@ hr {
 .chart{
     font-size: 3rem;
     font-weight: bold;
-    color: darkorange;
+    color: orange;
     padding-left: 1rem;
 }
 
