--- a/filmoteka/src/pages/Home.css
+++ b/filmoteka/src/pages/Home.css
@@ -62,6 +62,8 @@ h1{
 }
 
 .card-end-section{
+    display: flex;
+    flex-direction: column;
     padding: 0 1.5rem;
     padding-bottom: 2rem;
 }
