--- a/filmoteka/src/styles.css
+++ b/filmoteka/src/styles.css
@@ -10,6 +10,7 @@
 
 body{
     margin: 0;
+    
 }
 
 .navbar{
@@ -88,7 +89,33 @@ body{
     color: white;
     text-align: center;
     padding: 2rem;
+
 }
+
+.footer-p{
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+
+/* Carusels */
+
+.carousel-content{
+    cursor: pointer;
+    margin-bottom: 1rem;
+}
+
+.info-h3{
+    cursor: pointer;
+}
+
+.last-section-img{
+    width: auto;
+}
+.carousel-element{
+    text-align: center;
+}
+
 
 /* Search section */
 
