--- a/filmoteka/src/styles.css
+++ b/filmoteka/src/styles.css
@@ -67,6 +67,8 @@ body{
 .login-section{
     /* flex:1; */
     text-align: right;
+    margin: 0;
+    padding: 0;
 }
 
 .login-btn{
@@ -80,7 +82,6 @@ body{
 .login-btn:hover{
     background-color: rgb(255, 136, 0);
 }
-
 
 /* Footer section */
 
