--- a/filmoteka/src/pages/Home.css
+++ b/filmoteka/src/pages/Home.css
@@ -44,6 +44,7 @@ h1{
     flex: 1;
     /* background-color: aqua; */
     border-radius: 3px;
+    /* width: 100%; */
     box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.5);
 }
 
@@ -52,7 +53,8 @@ h1{
 }
 
 .card-first-section{
-    object-fit:contain;
+    object-fit:cover;
+    width: 100%;
     height: 200px;
 }
 
