--- a/filmoteka/src/styles.css
+++ b/filmoteka/src/styles.css
@@ -58,6 +58,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
     list-style: none;
